--- a/templates/app/content/index.html
+++ b/templates/app/content/index.html
@@ -1,4 +1,4 @@
-<div id="content" class="flex flex-col items-center justify-center h-screen">
+<div id="content" class="flex flex-col items-center justify-center h-screengit >
     <div class="text-center">
       <div class="flex items-center justify-center mb-4">
         <h1 class="text-6xl font-black">hi there!</h1>
