--- a/templates/app/sidebar.html
+++ b/templates/app/sidebar.html
@@ -16,7 +16,7 @@
       <a 
         href="/app/index"
         class="block py-2.5 px-4 text-black hover:bg-orange transition duration-200"
-          hx-get="/app/content/index" hx-target="#content">
+          hx-get="/app/content/dashboard" hx-target="#content">
           Dashboard
       </a>
       <!-- Add more navigation items as needed -->
