--- a/templates/home/header.html
+++ b/templates/home/header.html
@@ -11,9 +11,9 @@
   </div>
 
   <nav class="flex items-stretch flex-grow">
-    <a href="/about" class="flex-1 flex items-center justify-center px-4 py-3 hover:bg-orange border-r-2 border-black" hx-get="/about" hx-target="#content" hx-push-url="true">about us</a>
+    <a href="/about" class="flex-1 flex items-center justify-center px-4 py-3 hover:bg-orange" hx-get="/about" hx-target="#content" hx-push-url="true">about us</a>
     <a href="/blog" class="flex-1 flex items-center justify-center px-4 py-3 hover:bg-orange border-x-2 border-black" hx-get="/blog" hx-target="#content" hx-push-url="true">blog</a>
-    <a href="https://forms.gle/rVQWtm4v64DGbMkw5" class="flex-1 flex items-center justify-center px-4 py-3 hover:bg-orange border-l-2 border-black">contact</a>
+    <a href="https://forms.gle/rVQWtm4v64DGbMkw5" class="flex-1 flex items-center justify-center px-4 py-3 hover:bg-orange">contact</a>
   </nav>
   
   <div class="flex items-stretch w-48">
