--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <!-- <script>
+      TODO: hot reloading
+      const evtSource = new EventSource("/dev/reload");
+      evtSource.onmessage = function(e) {
+        if (e.data === "reload") {
+          location.reload();
+        }
+      }
+    </script> -->
     
     <!-- App Title -->
     <title>{% block title %}deal buddy{% endblock %}</title>
