--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -2,5 +2,5 @@
 {% include "sidebar.html" %}
 
 {% block content %}
-  {% include "content/index.html" %}
+  {% include initial_content %}
 {% endblock %}
