--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/htmx.org@2.0.0-alpha1/dist/htmx.min.js"></script>
  
     <!-- Static Assets -->
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="http://localhost:8000/static/favicon.ico">
     <link href="/static/css/main.css" rel="stylesheet">
 
     <!-- Google Fonts -->
@@ -31,12 +31,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="flex h-full bg-beige">
-  {% block sidebar %}{% endblock %}
-  <main class="flex-grow flex items-center justify-center">
-    <div id="content" class="text-center">
-      {% block content %}{% endblock %}
-    </div>
-  </main>
+<body class="flex min-h-screen bg-beige">
+    <aside class="sidebar z-50">
+        {% block sidebar %}{% endblock %}
+    </aside>
+    <main class="main-content flex-grow">
+        <div id="content" class="flex justify-center w-full min-h-screen">
+            {% block content %}{% endblock %}
+        </div>
+    </main>
 </body>
 </html>
